server/debugger_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  labels:
    app: debug
spec:  
    containers:
    - name: debug
      image: busybox
      command: ["sleep", "3600"]
