server/clientapi_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientapi
  labels:
    app: clientapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientapi
  template:
    metadata:
      labels:
        app: clientapi
    spec:
      containers:
      - name: alchemiscale-client
        image: ghcr.io/openforcefield/alchemiscale-server:0.1.3-2
        ports:
        - containerPort: 1840
        args: ["api", "--host", "0.0.0.0", "--port", "1840", "--workers", "2"]
---
apiVersion: v1
kind: Service
metadata:
  name: clientapi-service
spec:
  selector:
    app: clientapi
  ports:
  - port: 1840
    name: http
