server/computeapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alchemiscale-computeapi
  namespace: alchemiscale
  labels:
    app: alchemiscale-computeapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alchemiscale-computeapi
  template:
    metadata:
      labels:
        app: alchemiscale-computeapi
    spec:
      containers:
      - name: alchemiscale-computeapi-container
        image: ghcr.io/openforcefield/alchemiscale-server:0.1.3-3
        ports:
        - containerPort: 1841
        args: ["compute", "api", "--host", "0.0.0.0",  "--port", "1841", "--workers", "2"]
---
apiVersion: v1
kind: Service
metadata:
  name: alchemiscale-computeapi-service
  namespace: alchemiscale
spec:
  selector:
    app: alchemiscale-computeapi
  ports:
  - port: 1841
    name: http
