server/alchemiscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alchemiscale-ingress
  namespace: alchemiscale
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: api.alchemiscale.internal
    http:
      paths:
      - backend:
          service:
            name: alchemiscale-clientapi-service
            port:
              number: 1840
        path: /
        pathType: Prefix
  - host: compute.alchemiscale.internal
    http:
      paths:
      - backend:
          service:
            name: alchemiscale-computeapi-service
            port:
              number: 1841
        path: /
        pathType: Prefix
